# better-camera

./: .gitignore  is_focus.py  main.py  readme.md  requirements.txt  test-gradio.py
cpp/: CMakeLists-backup.txt  CMakeLists.txt  FaceDetection  demo-use-tools  demo-use-tools-without-h.cpp  demo-use-tools.cpp  demo-use-tools.py  fail2link.hpp  model.cpp  model.hpp  model.py  tools.cpp  tools.hpp
cpp/data/: check-ptl.py
cpp_try/: CMakeLists.txt  example-app.cpp
eyecontactcnn/: convert_pkl.py  try.ipynb
from_server/better-camera - Copy/: is_focus.py
from_server/better-camera - Copy/eyecontactcnn/: demo.py  requirements.txt
from_server/better-camera - Copy/flagged/: log.csv
from_server/video_output/: main.py  tmp.py
from_server/video_output/eyecontactcnn/: simple.py
ljy-ver/better-camera/: .gitignore  flops_calc.py  is_focus.py  is_sheltered.py  main.py  test-gratio-copy.py  test-nolag.py  tools.py
ljy-ver/better-camera/eyecontactcnn/: demo-use-tools.py  demo.py  model = 0.py  tools.py
ljy-ver/better-camera/from_server/better-camera - Copy/: test-gradio-copy.py  test-gradio-second.py  test_gradio.ipynb
ljy-ver/better-camera/from_server/video_output/: is_focus.py  is_sheltered.py  test-gradio-copy.py  test-gradio.py
ljy-ver/better-camera/from_server/video_output/eyecontactcnn/: simple2.py  tools.py
ljy-ver/from_server/better-camera - Copy/: is_sheltered.py  main.py  test-gradio-copy.py
ljy-ver/from_server/video_output/eyecontactcnn/: demo.py  environment.yml
